# dify_plugins

./: .cursorindexingignore  .env.example  .flake8  .gitignore  .mcp.json  .npm-global-packages.txt  .pre-commit-config.yaml  AGENTS.md  GEMINI.md  Makefile  README.md  base.code-workspace  compose.override.yml  package-lock.json  package.json  project.yml  pyproject.toml  review_sharepoint_list_tests.md
.claude/: settings.json  settings.local.json
.claude/skills/: README.md
.codex/: config.toml  version.json
.cursor/: commands  mcp.json
.cursor/rules/: core.mdc  project.mdc  rules.mdc
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: simple.yml
.github/workflows/: ci.yml  claude.yml  test-all-subsystems.yml
app/: __init__.py  app_factory.py  demo.py  ex.py
app/db/: __init__.py  bootstrap.py  models.py  session.py
app/dify_plugin/: nanobana.difypkg.bk
app/features/: chat.py  search.py
app/gpt5_agent_strategies/: PRIVACY.md  README.md  __init__.py  main.py  manifest.yaml  requirements.txt
app/nanobana/: GUIDE.md  PRIVACY.md  README.md  manifest.yaml  requirements.txt
app/openai_gpt5_responses/: .env.example  PRIVACY.md  README.md  __init__.py  main.py  manifest.yaml  requirements.txt
app/repositories/: settings_repo.py  thread_repo.py
app/services/: settings_service.py  thread_service.py  title_service.py
app/sharepoint_list/: .env.example  PRIVACY.md  README.md  main.py  manifest.yaml  requirements.txt
app/ui/: app_ui.py  avatars.py  head.py  threads_ui.py
app/utils/: svg.py
app/web/: assets.py  factory.py
checklists/: agent_full_cycle_evaluation_checklist.md  ai_agent_collaboration_exec_consistency_checklist.md  codex_subagent_pipeline_cli_checklist.md  codex_subagent_pipeline_integration_smoke_checklist.md  codex_subagent_pipeline_tests_review_followup_checklist.md  codex_subagent_pipeline_tests_review_round2_checklist.md  codex_subagent_pipeline_tests_review_round3_checklist.md  codex_subagent_pipeline_tests_review_round4_checklist.md  codex_subagent_pipeline_tests_review_round5_checklist.md  codex_subagent_skill_alignment_checklist.md  codex_vs_spark_substitutability_eval_20260214.md  general_dev_collab_pipeline_design_2026-01-16.md  openai_responses_provider_subagent_eval_20260211_235302.md  refactor_app_factory_staged_migration.md  sharepoint_list_consistency_checklist.md  sharepoint_list_consistency_checklist_2026-01-13.md  sharepoint_list_consistency_checklist_2026-01-19.md  sharepoint_list_consistency_loop_pipeline_design_2026-01-16.md  sharepoint_list_dify_review_checklist.md  threads_feature_checklist.md
docker/: Dockerfile.cpu  Dockerfile.gpu  compose.cpu.yml  compose.gpu.yml  compose.override.yml.example
docker/rc/: .bashrc  .tmux.conf
docs/: note_sharepoint_list_devlog.md
docs/03.detail_design/: dify_plugin_development_guide.md  gradio_fastapi_playbook.md  nanobana_vertex_nano_banana_plugin.md  sharepoint_list_list_items_filters.md
docs/04.knowledge/: gradio_fastapi_threads_ui_lessons.md
docs/ai-agent-reviews/: agent_instruction_simplification_review_2026-03-15_round1.md  agent_instruction_simplification_review_2026-03-15_round1_response.md  agent_instruction_simplification_review_2026-03-16_round2.md  agent_instruction_simplification_review_2026-03-16_round2_response.md  ai-agent-collaboration-exec_consistency_pipeline_spec_2026-01-11.json  ai-agent-collaboration-exec_consistency_prompt_2026-01-11.txt  ai-agent-collaboration-exec_contract_output_2026-01-08.md  ai-agent-collaboration-exec_pipeline_spec.json  ai-agent-collaboration-exec_pipeline_spec_2026-01-08.json  ai-agent-collaboration-exec_pipeline_spec_draft.json  ai-agent-collaboration-exec_pipeline_spec_execute.json  ai-agent-collaboration-exec_pipeline_spec_fullsplit.json  ai-agent-collaboration-exec_pipeline_spec_light.json  ai-agent-collaboration-exec_pipeline_spec_review.json  ai-agent-collaboration-exec_prompt.txt  ai-agent-collaboration-exec_prompt_full.txt  ai-agent-collaboration-exec_review_2026-01-05_round1.md  ai-agent-collaboration-exec_subagent_prompts_2026-01-08.md  ai-agent-collaboration-exec_test_plan_2026-01-05.md  (+52 more)
docs/dsl/: SharepointAgent.yml  (+1 more)
notebooks/: ex.ipynb  ragas.ipynb
public/: manifest.json
sessions/: codex_bootstrap_log.md
tests/: conftest.py  test_api_endpoints.py  test_app_factory.py  test_chat_feature.py  test_db_bootstrap.py  test_db_session.py  test_pip_audit_gate.py  test_repo_methods.py  test_search_and_svg_utils.py  test_settings_service.py  test_thread_service.py  test_threads_ui.py
(+509 files in other folders)
